Breadcrumb Fix Spacing

--- a/assets/sass/components/_breadcrumb.scss
+++ b/assets/sass/components/_breadcrumb.scss
@@ -6,10 +6,11 @@
   }
 
   &__item {
-    display: inline;
+    display: inline-block;
 
     &:not(:last-child)::after {
       content: "»";
+      padding-inline: 0.25rem;
     }
   }
 
